Fixed image stretch issue
Added alt to id="myself" in about.html
Added object-fit:cover in style.css

--- a/assets/style.css
+++ b/assets/style.css
@@ -150,6 +150,7 @@ body {
     float: right;
     width: 25vw;
     height: 65vh;
+    object-fit: cover;
 }
 
 @media only screen and (max-device-width: 480px) {
@@ -167,6 +168,7 @@ body {
         display: inline-block;
         width: 100%;
         height: 100%;
+        object-fit: cover;
     }
 }
 
